# hadas

./: .gitignore  CMakeLists.txt  build.bat
assets/shaders/: quad.frag  quad.vert
assets/textures/: assets.aseprite
include/: assets.h  config.h  config.hpp  game.h  gl_renderer.h  gl_renderer.hpp  interface.h  platform.h  render_types.h  utils.h
include/utils/: mathf.h  matrix.h  phys2d.h  quat.h  vector.h
src/: main.cpp
src/core/: assets.cpp  game.cpp  interface.cpp  platform.cpp  utils.cpp
